--- a/interactive-particle-network/index.html
+++ b/interactive-particle-network/index.html
@@ -3,12 +3,15 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 
 <body>
     <canvas id="backgroundCanvas"></canvas>
     <canvas id="starsCanvas"></canvas>
     <script src="main.js"></script>
+    <div class = "background"><span>同在</span></div>
+    
 </body>
 
 </html>
